# elite-trade-finder

./: .gitignore  README.md  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: commodities.json
src-tauri/migrations/postgres/: 0001_initial.sql  0002_multi_user.sql  0003_latest_market.sql
src-tauri/migrations/sqlite/: 0001_initial.sql  0002_multi_user.sql  0003_latest_market.sql
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  settings_store.rs  state.rs  types.rs
src-tauri/src/alerts/: dispatcher.rs  mod.rs  toast.rs  webhook.rs
src-tauri/src/db/: cleanup.rs  migrations.rs  mod.rs  retention.rs  seed.rs  user_id.rs
src-tauri/src/engine/: loops.rs  mod.rs  orchestrator.rs  queries.rs  rare_chains.rs  scoring.rs  single_hop.rs
src-tauri/src/ingest/: aggregator.rs  eddn.rs  ingestor.rs  journal.rs  mod.rs  spansh.rs
src-tauri/tests/: alerts_threshold.rs  db_connect.rs  db_migrate_sqlite.rs  db_retention.rs  db_seed.rs  eddn_decode.rs  engine_loops2.rs  engine_loops_bfs.rs  engine_queries.rs  engine_rare_chains.rs  engine_scoring.rs  engine_single_hop.rs  ingest_write.rs  journal_apply.rs  journal_parse.rs
src-tauri/tests/fixtures/eddn/: commodity_v3.json
src-tauri/tests/fixtures/journal/: docked.jsonl  loadout.jsonl  market.json
src/api/: tauri.ts
src/components/: RouteDetail.tsx  RouteRow.tsx  Sidebar.tsx
src/store/: index.ts
src/types/: AlertSettings.ts  Diagnostics.ts  (+14 more)
(+4 files in other folders)
