[package]
name = "elite-trade-finder"
version = "0.1.1"
description = "Real-time Elite Dangerous trade route finder"
authors = ["Dominic Stilma"]
license = "MIT"
edition = "2021"
rust-version = "1.78"

[lib]
name = "elite_trade_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring", "sqlite", "postgres", "chrono", "json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

zeromq = { version = "0.4", default-features = false, features = ["tokio-runtime", "all-transport"] }
flate2 = "1"

notify = "6"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "1"
anyhow = "1"
once_cell = "1"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }

ts-rs = { version = "10", features = ["chrono-impl"] }

[dev-dependencies]
tempfile = "3"
